# auto-film-conductor

./: .env.example  .gitignore  README.md  pyproject.toml
auto_film_conductor/: app.py  cli.py  config.py  domain.py  models.py  path_mapping.py  storage.py  viewer.py  voting.py
auto_film_conductor/adapters/: __init__.py  discord_bot.py  mpv.py  radarr.py
auto_film_conductor/services/: conductor.py
auto_film_conductor/static/: viewer.html
tests/: conftest.py  test_conductor.py  test_config.py  test_discord_bot.py  test_mpv.py  test_path_mapping.py  test_radarr.py  test_viewer.py  test_voting.py
